--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,10 +1,10 @@
 # FILE: preseed.cfg
-# DESCRIPTION: Preseed file for setting up the 'ravage' machine.
+# DESCRIPTION: Preseed file for setting up the Ravage.
 # This file automates most of the Debian installation process,
 # but it requires manual input for security-sensitive information
 # like passwords and GitHub credentials.
-# VERSION: 1.0
-# DATE: 2025-09-20
+# VERSION: 1.1
+# DATE: 2025-09-21
 
 ### Localisation
 # Sets the system language, locale, keyboard layout, and timezone.
@@ -106,8 +106,10 @@ d-i finish-install/reboot_now boolean true
 
 ### Late Command
 # Executes commands on the new system right before it reboots.
-# It clones your private GitHub repository and runs a setup script, 
+# It clones your private GitHub repository, sets the cloned
+# repo to executable and then runs a setup script, 
 # prompting for credentials.
 d-i preseed/late_command string \
       in-target git clone https://github.com/MrFordy/ravage.git /root/setup_scripts; \
+      in-target chmod -R +x /root/setup_scripts; \
       in-target bash /root/setup_scripts/setup_all.sh;
