--- a/preseed.cfg
+++ b/preseed.cfg
@@ -3,8 +3,8 @@
 # This file automates most of the Debian installation process,
 # but it requires manual input for security-sensitive information
 # like passwords and GitHub credentials.
-# VERSION: 1.1
-# DATE: 2025-09-21
+# VERSION: 1.2
+# DATE: 2025-09-25
 
 ### Localisation
 # Sets the system language, locale, keyboard layout, and timezone.
@@ -21,7 +21,7 @@ d-i time/zone string Europe/London
 # to a Cloudflare DNS server (1.1.1.1).
 # Hostname is set to 'ravage' and domain to 'sunny-side.co.uk'.
 d-i netcfg/get_method string static
-d-i netcfg/get_ipaddress string 192.168.0.2
+d-i netcfg/get_ipaddress string 192.168.0.250
 d-i netcfg/get_netmask string 255.255.255.0
 d-i netcfg/get_gateway string 192.168.0.1
 d-i netcfg/get_nameservers string 1.1.1.1
@@ -86,13 +86,14 @@ d-i partman-auto/expert_recipe string                             \
 # minimal, lightweight system.
 d-i base-installer/install-recommends boolean false
 
-### Tasksel
-# Selects the base system and SSH server for installation.
+### Task Selection
+# Selects the 'task' the system will perform. Here this is a headless
+# base system and SSH server.
 tasksel tasksel/first multiselect standard system, ssh-server
 
 ### Package Selection
 # Installs packages needed to run git, pi-hole, unbound, etc.
-d-i pkgsel/include string nano openssh-client git curl docker.io docker-compose-plugin keepalived
+d-i pkgsel/include string nano openssh-client git curl keepalived
 d-i pkgsel/install-recommends boolean false
 
 ### GRUB
