--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,9 +1,9 @@
 # FILE: preseed.cfg
-# DESCRIPTION: Preseed file for setting up the Ravage.
+# DESCRIPTION: Preseed file for setting up Ravage (primary pihole).
 # This file automates most of the Debian installation process,
 # but it requires manual input for security-sensitive information
 # like passwords and GitHub credentials.
-# VERSION: 1.2
+# VERSION: 1.2.1
 # DATE: 2025-09-25
 
 ### Localisation
