--- a/preseed.cfg
+++ b/preseed.cfg
@@ -3,8 +3,6 @@
 # This file automates most of the Debian installation process,
 # but it requires manual input for security-sensitive information
 # like passwords and GitHub credentials.
-# VERSION: 1.2.1
-# DATE: 2025-09-25
 
 ### Localisation
 # Sets the system language, locale, keyboard layout, and timezone.
@@ -28,10 +26,19 @@ d-i netcfg/get_nameservers string 1.1.1.1
 d-i netcfg/get_hostname string ravage
 d-i netcfg/get_domain string sunny-side.co.uk
 
-### Mirror Selection
+### Mirror Selection and APT Setup
 # Tells the installer to select a UK package mirror.
 d-i mirror/country string GB
+d-i mirror/http/hostname string deb.debian.org
+d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
+# Enables the 'security', 'updates', 'contrib', and 'non-free' repositories.
+d-i apt-setup/non-free boolean true
+d-i apt-setup/contrib boolean true
+# Skips the prompt asking to scan for extra installation media (CDs/DVDs).
+d-i apt-setup/cdrom/check_for_cd boolean false
+# Prevents the CD-ROM entry from being written to the /etc/apt/sources.list file.
+d-i apt-setup/disable-cdrom-list boolean true
 
 ### Account Setup
 # Configures user accounts. It intentionally omits passwords for 
@@ -95,6 +102,8 @@ tasksel tasksel/first multiselect standard system, ssh-server
 # Installs packages needed to run git, pi-hole, unbound, etc.
 d-i pkgsel/include string nano openssh-client git curl keepalived
 d-i pkgsel/install-recommends boolean false
+# Configure system to install security updates automatically.
+d-i pkgsel/update-policy select unattended-upgrades
 
 ### GRUB
 # Installs the GRUB2 boot loader.
