--- a/preseed.cfg
+++ b/preseed.cfg
@@ -52,6 +52,12 @@ d-i user-setup/local-user-name string ravage-admin
 d-i user-setup/fullname string ravage-admin
 d-i passwd/user-password password
 d-i passwd/user-password-again password
+# This sections prompts the for a password for pi-hole web interface
+d-i debconf/question ravage/pihole-password
+d-i ravage/pihole-password seen false
+d-i ravage/pihole-password type password
+d-i ravage/pihole-password description Pi-hole Web Interface Password:
+d-i ravage/pihole-password password
 
 ### Partitioning
 # Automates disk partitioning based on a predefined scheme.
@@ -116,10 +122,12 @@ d-i finish-install/reboot_now boolean true
 
 ### Late Command
 # Executes commands on the new system right before it reboots.
-# It clones your private GitHub repository, sets the cloned
+# It retrieves the pihole password from the debconf database, 
+# clones the Ravage GitHub repository, sets the cloned
 # repo to executable and then runs a setup script, 
 # prompting for credentials.
 d-i preseed/late_command string \
+      PIHOLE_PASSWORD=$(debconf-get ravage/pihole-password); \
       in-target git clone https://github.com/MrFordy/ravage.git /root/setup_scripts; \
       in-target chmod -R +x /root/setup_scripts; \
       in-target bash /root/setup_scripts/setup_all.sh;
