Add ufw and pihole password
Added ufw to the packages to install via pkgsel and corrected error in call to setup_all.sh to pass "$PIHOLE_PASSWORD" correctly.

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -106,7 +106,7 @@ tasksel tasksel/first multiselect standard system, ssh-server
 
 ### Package Selection
 # Installs packages needed to run git, pi-hole, unbound, etc.
-d-i pkgsel/include string nano openssh-client git curl keepalived
+d-i pkgsel/include string ufw nano openssh-client git curl keepalived
 d-i pkgsel/install-recommends boolean false
 # Configure system to install security updates automatically.
 d-i pkgsel/update-policy select unattended-upgrades
@@ -130,4 +130,4 @@ d-i preseed/late_command string \
       PIHOLE_PASSWORD=$(debconf-get ravage/pihole-password); \
       in-target git clone https://github.com/MrFordy/ravage.git /root/setup_scripts; \
       in-target chmod -R +x /root/setup_scripts; \
-      in-target bash /root/setup_scripts/setup_all.sh;
+      in-target bash /root/setup_scripts/setup_all.sh "$PIHOLE_PASSWORD";
