On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   04-pihole-static-dhcp.conf
	new file:   first-boot-setup.sh
	modified:   preseed.cfg
	modified:   setup_all.sh
	new file:   setup_keepalived.sh
	new file:   setup_nebula-sync.sh
	modified:   setup_pihole.sh
	modified:   setup_ssh.sh
	modified:   setup_ufw.sh
	modified:   setup_unbound.sh

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -52,12 +52,6 @@ d-i user-setup/local-user-name string ravage-admin
 d-i user-setup/fullname string ravage-admin
 d-i passwd/user-password password
 d-i passwd/user-password-again password
-# This sections prompts the for a password for pi-hole web interface
-d-i debconf/question ravage/pihole-password
-d-i ravage/pihole-password seen false
-d-i ravage/pihole-password type password
-d-i ravage/pihole-password description Pi-hole Web Interface Password:
-d-i ravage/pihole-password password
 
 ### Partitioning
 # Automates disk partitioning based on a predefined scheme.
@@ -105,8 +99,19 @@ d-i base-installer/install-recommends boolean false
 tasksel tasksel/first multiselect standard system, ssh-server
 
 ### Package Selection
-# Installs packages needed to run git, pi-hole, unbound, etc.
-d-i pkgsel/include string ufw nano openssh-client git curl keepalived
+# Installs the following packages that installation is dependent on:
+# - nano: A simple text editor for command line.
+# - git: For cloning repositories.
+# - curl: For transferring data with URLs.
+# - golang-go: The Go programming language, needed for nebula-sync.
+# Installs the following packages that will provide necessary functionality:
+# - ufw: Uncomplicated Firewall for managing firewall rules.
+# - openssh-client: For SSH client capabilities.
+# - unbound: A validating, recursive, and caching DNS resolver.
+# - keepalived: For high availability and load balancing.
+# Disables installation of "recommended" packages for these selections.
+d-i pkgsel/include string nano git curl golang-go
+d-i pkgsel/include string ufw openssh-client unbound keepalived
 d-i pkgsel/install-recommends boolean false
 # Configure system to install security updates automatically.
 d-i pkgsel/update-policy select unattended-upgrades
@@ -121,13 +126,30 @@ d-i grub-installer/grub2_instead_of_grub_legacy boolean true
 d-i finish-install/reboot_now boolean true
 
 ### Late Command
-# Executes commands on the new system right before it reboots.
-# It retrieves the pihole password from the debconf database, 
-# clones the Ravage GitHub repository, sets the cloned
-# repo to executable and then runs a setup script, 
-# prompting for credentials.
+# This clones the Ravage GitHub repository, sets the cloned repo to
+# executable and then creates a systemd service to run a script called
+# first-boot-setup.sh to collect passwords for Pi-hole and Keepalived on
+# first boot.
 d-i preseed/late_command string \
-      PIHOLE_PASSWORD=$(debconf-get ravage/pihole-password); \
       in-target git clone https://github.com/MrFordy/ravage.git /root/setup_scripts; \
       in-target chmod -R +x /root/setup_scripts; \
-      in-target bash /root/setup_scripts/setup_all.sh "$PIHOLE_PASSWORD";
+      cat > /target/etc/systemd/system/first-boot-setup.service <<'EOFSYSTEMD'
+[Unit]
+Description=First Boot Setup - Collect Passwords and Configure System
+After=network.target
+Before=getty@tty1.service
+
+[Service]
+Type=oneshot
+ExecStart=/root/setup_scripts/first-boot-setup.sh
+StandardInput=tty
+StandardOutput=tty
+StandardError=tty
+TTYPath=/dev/tty1
+TTYReset=yes
+TTYVHangup=yes
+
+[Install]
+WantedBy=multi-user.target
+EOFSYSTEMD
+      in-target systemctl enable first-boot-setup.service
