Tweaks to setup scripts and configuration files. Also updated README.md with new information.

--- a/04-pihole-static-dhcp.conf
+++ b/04-pihole-static-dhcp.conf
@@ -3,6 +3,27 @@
 # Format:
 # dhcp-host=<MAC>,<IP>,<hostname>[,<lease_time>]
 
+### IP Allocation Strategy
+# Static DHCP leases are assigned in the range 192.168.0.1 - 192.168.0.199
+# and 192.168.0.250 - 192.168.0.255.
+# Dynamic DHCP leases are assigned in the range 192.168.0.200 - 192.168.0.249.
+# Static DHCP leases for specific devices are defined below.
+# 192.168.0.1 to 192.168.0.9 - Reserved for network infrastructure
+# 192.168.0.10 to 192.168.0.19 - Reserved for Deco access points and VoIP phones
+# 192.168.0.20 to 192.168.0.29 - Reserved for future use
+# 192.168.0.30 to 192.168.0.39 - Reserved for desktops and laptops
+# 192.168.0.40 to 192.168.0.49 - Reserved for printers and scanners
+# 192.168.0.50 to 192.168.0.59 - Reserved for smart home hubs and assistants
+# 192.168.0.60 to 192.168.0.69 - Reserved for gaming consoles and streaming devices
+# 192.168.0.70 to 192.168.0.79 - Reserved for CCTV cameras
+# 192.168.0.80 to 192.168.0.89 - Reserved for future use
+# 192.168.0.90 to 192.168.0.99 - Reserved for Sonos speakers
+# 192.168.0.100 to 192.168.0.119 - Reserved for mobile devices (phones, tablets)
+# 192.168.0.120 to 192.168.0.149 - Reserved for future use
+# 192.168.0.150 to 192.168.0.199 - Reserved for smart plugs and lights
+# 192.168.0.200 to 192.168.0.249 - Reserved for dynamic DHCP leases
+# 192.168.0.250 to 192.168.0.255 - Reserved for HA devices
+
 ### Static DHCP leases
 dhcp-host=90:2B:34:38:DC:CD,192.168.0.3,soundwave,infinite
 dhcp-host=08:00:27:52:ED:B5,192.168.0.4,buzzsaw,infinite
