Updates to preseed.cfg and setup_all.sh to reflect  renaming of first-boot-setup.sh to  first_boot_setup.sh and minor improvements to  setup_keepalived.sh.

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -126,14 +126,15 @@ d-i grub-installer/grub2_instead_of_grub_legacy boolean true
 d-i finish-install/reboot_now boolean true
 
 ### Late Command
-# This clones the Ravage GitHub repository, sets the cloned repo to
-# executable and then creates a systemd service to run a script called
-# first-boot-setup.sh to collect passwords for Pi-hole and Keepalived on
-# first boot.
+# This adds ravage-admin to the sudo group, clones the Howlback GitHub
+# repository, sets the cloned repo to executable and then creates a systemd
+# service to run a script called first-boot-setup.sh to collect passwords for
+# Pi-hole and Keepalived on first boot.
 d-i preseed/late_command string \
+      in-target usermod -aG sudo ravage-admin; \
       in-target git clone https://github.com/MrFordy/ravage.git /root/setup_scripts; \
       in-target chmod -R +x /root/setup_scripts; \
-      cat > /target/etc/systemd/system/first-boot-setup.service <<'EOFSYSTEMD'
+      cat > /target/etc/systemd/system/first_boot_setup.service <<'EOFSYSTEMD'
 [Unit]
 Description=First Boot Setup - Collect Passwords and Configure System
 After=network.target
@@ -141,7 +142,7 @@ Before=getty@tty1.service
 
 [Service]
 Type=oneshot
-ExecStart=/root/setup_scripts/first-boot-setup.sh
+ExecStart=/root/setup_scripts/first_boot_setup.sh
 StandardInput=tty
 StandardOutput=tty
 StandardError=tty
@@ -152,4 +153,4 @@ TTYVHangup=yes
 [Install]
 WantedBy=multi-user.target
 EOFSYSTEMD
-      in-target systemctl enable first-boot-setup.service
+      in-target systemctl enable first_boot_setup.service
