--- a/preseed.cfg
+++ b/preseed.cfg
@@ -18,13 +18,37 @@ d-i time/zone string Europe/London
 # no DHCP server. It sets the IP, netmask, gateway, and points
 # to a Cloudflare DNS server (1.1.1.1).
 # Hostname is set to 'ravage' and domain to 'sunny-side.co.uk'.
-d-i netcfg/get_method string static
+
+# netcfg will choose an interface that has link if possible. This makes it
+# skip displaying a list if there is more than one interface.
+d-i netcfg/choose_interface select auto
+
+# Automatic network configuration is the default. Need to disable it to
+# use static configuration.
+d-i netcfg/disable_autoconfig boolean true
+
+# There is no DHCP server so need to tell the installer to handle this.
+d-i netcfg/dhcp_failed note
+d-i netcfg/dhcp_options select Configure network manually
+
+# Static network configuration.
 d-i netcfg/get_ipaddress string 192.168.0.250
 d-i netcfg/get_netmask string 255.255.255.0
 d-i netcfg/get_gateway string 192.168.0.1
 d-i netcfg/get_nameservers string 1.1.1.1
+d-i netcfg/confirm_static boolean true
+
+# Any hostname and domain names assigned from dhcp take precedence over
+# values set here. However, setting the values still prevents the questions
+# from being shown, even if values come from dhcp.
+
 d-i netcfg/get_hostname string ravage
 d-i netcfg/get_domain string sunny-side.co.uk
+
+# If you want to force a hostname, regardless of what either the DHCP
+# server returns or what the reverse DNS entry for the IP is, uncomment
+# and adjust the following line.
+d-i netcfg/hostname string ravage
 
 ### Mirror Selection and APT Setup
 # Tells the installer to select a UK package mirror.
