Change line endings from CRLF to LF

--- a/04-pihole-static-dhcp.conf
+++ b/04-pihole-static-dhcp.conf
@@ -2,6 +2,7 @@
 # DESCRIPTION: Static DHCP assignments for Pi-hole's DHCP server
 # Format:
 # dhcp-host=<MAC>,<IP>,<hostname>[,<lease_time>] 
+# Changed from CRLF to LF line endings
 
 ### IP Allocation Strategy
 # Static DHCP leases are assigned in the range 192.168.0.1 - 192.168.0.199
