--- a/preseed.cfg
+++ b/preseed.cfg
@@ -3,6 +3,7 @@
 # This file automates most of the Debian installation process,
 # but it requires manual input for security-sensitive information
 # like passwords and GitHub credentials. 
+# Changed from CRLF to LF line endings
 
 ### Localisation
 # Sets the system language, locale, keyboard layout, and timezone.
